--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
-body {
+body,
+html {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-image: url("https://i.pinimg.com/736x/17/b2/7e/17b27e8ea8f573d6fefb6f47cfa65273.jpg");
+  background-position: "center";
+  background-size: "cover";
+  background-repeat: "no-repeat";
 }
